# vcap-cpp

./: .gitignore  CMakeLists.txt  README.md  doxygen.conf  doxygen.dox
examples/: Grab.cpp  Info.cpp  Pgm.cpp  Png.cpp  Sdl.cpp  sdl_pgm.cpp
include/Vcap/: Controls.hpp  Formats.hpp  SmartPtr.hpp  Vcap.hpp
src/: Vcap.cpp
